src/main/kotlin/Opcode.bnf
{
  parserClass="io.runescript.plugin.lang.parser.RsOpParser"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="RsOp"
  psiImplClassSuffix="Impl"
  psiPackage="io.runescript.plugin.lang.psi.op"
  psiImplPackage="io.runescript.plugin.lang.psi.impl.op"
  elementTypeHolderClass="io.runescript.plugin.lang.psi.op.RsOpElementTypes"
  elementTypeClass="io.runescript.plugin.lang.psi.op.RsOpElementType"
  tokenTypeClass="io.runescript.plugin.lang.psi.op.RsOpElementType"
  generateTokenAccessors=true
  classHeader="// This class is automatically generated. Do not edit."
  tokens=[
    LBRACKET='['
    RBRACKET=']'
    LPAREN='('
    RPAREN=')'
    COMMA=','
    HASH='#'
  ]
}

File ::= Command*

Command ::= AttributeList CommandHeader ParameterList ReturnList

AttributeList ::= Attribute*
Attribute ::= '#' '[' NameLiteral '(' (AttributeValue (',' AttributeValue)*)? ')' ']'
AttributeValue ::= NameLiteral | IntegerValue
IntegerValue ::= INTEGER
CommandHeader ::= '[' NameLiteral ',' NameLiteral ']'
ParameterList ::= '(' (TypeName (',' TypeName)*)? ')'
ReturnList ::= '(' (TypeName (',' TypeName)*)? ')'
TypeName ::= TYPE_LITERAL
NameLiteral ::= IDENTIFIER
